--- a/src/main/resources/templates/add-course.html
+++ b/src/main/resources/templates/add-course.html
@@ -15,13 +15,13 @@
   <div class="row">
     <form th:action="@{/admin/courses/add}" th:object="${newCourse}" method="post" enctype="multipart/form-data">
       <div class="mb-3">
-        <label for="title" class="form-label">Tytuł</label>
+        <label for="title" class="form-label">Title</label>
         <input type="text" class="form-control" id="title" th:field="*{title}">
       </div>
       <div class="mb-3">
         <input type="file" class="form-control" name="image" accept="image/*"/>
       </div>
-      <button type="submit" class="btn btn-primary" style="width: 100%">Dodaj</button>
+      <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
     </form>
   </div>
 </div>
