--- a/src/main/resources/templates/add-user-summary.html
+++ b/src/main/resources/templates/add-user-summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add course summary</title>
+    <title>Add user summary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
@@ -11,7 +11,7 @@
 
 
 <div class="container" style="margin-top:100px; text-align: center">
-    New course added
+    New user added
     <br/>
     <br/>
     <br/>
