--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,18 +10,40 @@
 <body>
 
 
-<div class="container" style="margin-top:100px; text-align: center">
-    Witamy w aplikacji Courses_Manager umożliwiającej zarządzanie szkoleniami.
-    <br/>
-    <br/>
-    <br/>
+<div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
+        <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Welcome to the Courses_Manager application</h1>
 </div>
 
-<div>
-    <form th:action="@{/admin/courses}" th:object="${newCourse}" enctype="multipart/form-data">
-        <button type="submit" class="btn btn-primary" style="width: 100%">Dodaj nowy kurs</button>
-    </form>
 
+<div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
+    <table align="center" style="text-align: center; width: 80%">
+        <tbody>
+        <tr>
+            <td>
+                <form th:action="@{/admin/courses}" th:object="${newCourse}" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: gold">Add new course</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/admin/all-users}" th:object="${users}" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: lawngreen">Show users</button>
+                </form>
+            </td>
+            <td>
+                <form th:action="@{/admin/users}" th:object="${newUser}" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: turquoise">Add new user</button>
+                </form>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <form th:action="@{/admin/all-courses-for-admin}" th:object="${courses}" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Show courses</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
