--- a/src/main/resources/templates/all-courses-for-admin.html
+++ b/src/main/resources/templates/all-courses-for-admin.html
@@ -11,27 +11,27 @@
 
 
 <div class="container" style="margin-top:100px;">
-    <div class="row">
+    <div class="row" align="center" text-align="center">
         <th:block th:each="course : ${courses}">
             <div class="col-4">
-                <div class="card" style="width: 100%; margin-bottom: 25px;">
-                    <div class="card-body">
-                        <h5 class="card-title custom-center" th:text="${course.title}">Course title</h5>
+                <div class="course" style="width: 100%; margin-bottom: 25px;">
+                    <div class="course-body">
+                        <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
                         <a th:href="@{/courses/details/__${course.id}__}">
                             <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
                         </a>
-
-                        <form th:action="@{/courses/add}" method="post">
-                            <input type="hidden" name="courseId" th:value="${course.id}"/>
-
-                            <button type="submit" style="width: 100%;" class="btn btn-primary">Zapisz się</button>
-                        </form>
                     </div>
 
                 </div>
             </div>
         </th:block>
     </div>
+</div>
+
+<div align="center">
+    <form th:action="@{/admin}" enctype="multipart/form-data">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
