--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>View All Users</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
 </head>
 
 
 <body style="background-color: #f6f6f6">
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
-    <table align="center" style="text-align: center">
+    <table align="center" style="text-align: center; width:80%">
         <thead>
             <tr style="background-color: palegreen; width: 100%; height: 30px">
                 <th>Id</th>
@@ -36,13 +35,13 @@
             </tr>
         </tbody>
 </table>
+
 </div>
 
-<div>
-    <a>
-        <button>Powrót do strony głównej</button>
-        <button>Dodaj użytwkonika</button>
-    </a>
+<div align="center">
+    <form th:action="@{/admin}" enctype="multipart/form-data">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
