block adding - part 1

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -41,6 +41,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Show courses</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/admin/blocks}" th:object="${newBlock}" enctype="multipart/form-data">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Add new block</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
