Add new block template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -43,7 +43,7 @@
             </td>
             <td>
                 <form th:action="@{/admin/blocks}" th:object="${newBlock}" enctype="multipart/form-data">
-                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Add new block</button>
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkcyan">Add new block</button>
                 </form>
             </td>
         </tr>
