--- a/src/main/resources/templates/add-block.html
+++ b/src/main/resources/templates/add-block.html
@@ -11,6 +11,29 @@
 
 <body>
 
+<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Courses</div>
+
+<div class="container" style="background-color: white; padding: 50px; border-radius:20px;">
+    <table class="table table-striped" align="center" style="text-align: center; width:50%">
+        <thead>
+        <tr style="background-color: palegreen; width: 100%; height: 30px">
+            <th>Id</th>
+            <th>Title</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="course : ${courses}">
+            <td th:text="${course.id}"></td>
+            <td th:text="${course.title}"></td>
+        </tr>
+        </tbody>
+    </table>
+
+</div>
+
+
+<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new block to the chosen course</div>
+
 <div class="container" style="margin-top:100px;">
     <div class="row">
         <form th:action="@{/admin/blocks/add}" th:object="${newBlock}" method="post" enctype="multipart/form-data">
@@ -21,7 +44,7 @@
 
             <div class="mb-3">
                 <label for="course" class="form-label">Course Id</label>
-                <input type="text" class="form-control" id="course" th:field="*{courseId}">
+                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course" th:field="*{courseId}">
             </div>
 
             <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
