Add new class template, show all classes template

--- a/src/main/resources/templates/add-class.html
+++ b/src/main/resources/templates/add-class.html
@@ -48,6 +48,11 @@
             </div>
 
             <div class="mb-3">
+                <label for="time" class="form-label">Time</label>
+                <input type="text" placeholder="HH:MM" class="form-control" id="time" th:field="*{time}">
+            </div>
+
+            <div class="mb-3">
                 <label for="blockId" class="form-label">Block Id</label>
                 <input type="text" placeholder="Type id of EXISTING block" class="form-control" id="blockId" th:field="*{blockId}">
             </div>
