--- a/src/main/resources/templates/all-classes.html
+++ b/src/main/resources/templates/all-classes.html
@@ -37,7 +37,7 @@
 
 
 <div align="center">
-    <form th:action="@{/admin}" enctype="multipart/form-data">
+    <form th:action="@{/admin}">
         <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
     </form>
 </div>
