--- a/src/main/resources/templates/add-course-summary.html
+++ b/src/main/resources/templates/add-course-summary.html
@@ -24,7 +24,7 @@
 </div>
 
 <div align="center">
-    <form th:action="@{/admin}" enctype="multipart/form-data">
+    <form th:action="@{/admin}">
         <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
     </form>
 
