--- a/src/main/resources/templates/all-courses-for-admin.html
+++ b/src/main/resources/templates/all-courses-for-admin.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<div class="container" style="margin-top:100px;">
+<div class="container" style="margin-top:100px">
     <div class="row" align="center" text-align="center">
         <th:block th:each="course : ${courses}">
             <div class="col-4">
