--- a/src/main/resources/templates/delete-course.html
+++ b/src/main/resources/templates/delete-course.html
@@ -35,7 +35,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/courses/delete}" th:object="${courseToDelete}" method="post" enctype="multipart/form-data">
+        <form th:action="@{/admin/courses/delete}" th:object="${courseToDelete}" method="post">
             <div class="mb-3">
                 <label for="course-id" class="form-label">Course id</label>
                 <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
