Delete block method (with deleting all classes assigned to that block)

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -69,6 +69,13 @@
                 </form>
             </td>
         </tr>
+        <tr>
+            <td>
+                <form th:action="@{/admin/blocks/delete-block}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: yellow; color: orange">Delete block</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
