Delete class by Id method + template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -75,6 +75,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: yellow; color: orange">Delete block</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/admin/classes/delete-class}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: deepskyblue">Delete class</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
