--- a/src/main/resources/templates/delete-block.html
+++ b/src/main/resources/templates/delete-block.html
@@ -35,7 +35,7 @@
 </div>
 
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Delete block</div>
-<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen block will also delete all classes assigned to that block.</div>
+<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen block will also delete all classes assigned to that block and all notifications assigned to the classes.</div>
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
