--- a/src/main/resources/templates/delete-class.html
+++ b/src/main/resources/templates/delete-class.html
@@ -40,7 +40,7 @@
 
 
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Delete class</div>
-
+<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen class will also delete all notifications assigned to that class.</div>
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
