--- a/src/main/resources/templates/delete-course.html
+++ b/src/main/resources/templates/delete-course.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Delete course</div>
-<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen course will also delete all blocks and classes assigned to that course and all notifications assigned to the classes.</div>
+<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen course will also delete all blocks and classes assigned to that course, all notifications assigned to the classes and all registrations assigned to the chosen course.</div>
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
