Show all notifications template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -80,6 +80,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: deepskyblue">Delete class</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/admin/all-notifications}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Show notifications</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
