Delete notification method (including deleting from table users_notifications) + template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -86,6 +86,13 @@
                 </form>
             </td>
         </tr>
+        <tr>
+            <td>
+                <form th:action="@{/admin/notifications/delete-notification}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkslategrey">Delete notification</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 </div>
