Add new notification method + template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -92,6 +92,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkslategrey">Delete notification</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/admin/notifications}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkorange">Add new notification</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
