Delete user method (including deleting registrations assigned to the user and deleting from users_notifications table) + template

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -97,6 +97,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkorange">Add new notification</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/admin/users/delete-user}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkturquoise">Delete user</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
