--- a/src/main/resources/templates/all-courses-for-admin.html
+++ b/src/main/resources/templates/all-courses-for-admin.html
@@ -17,7 +17,7 @@
                 <div class="course" style="width: 100%; margin-bottom: 25px;">
                     <div class="course-body">
                         <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
-                        <a th:href="@{/courses/details/__${course.id}__}">
+                        <a th:href="@{/admin/courses/details/__${course.id}__}">
                             <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
                         </a>
                     </div>
