Course details and block details - show all courses method

--- a/src/main/resources/templates/add-class.html
+++ b/src/main/resources/templates/add-class.html
@@ -16,8 +16,8 @@
         <thead>
         <tr style="background-color: palegreen; width: 100%; height: 30px">
             <th>Id</th>
-            <th>Title</th>
             <th>Block title</th>
+            <th>Course title</th>
         </tr>
         </thead>
         <tbody>
