--- a/src/main/resources/templates/add-notification.html
+++ b/src/main/resources/templates/add-notification.html
@@ -20,6 +20,7 @@
             <th>Date</th>
             <th>Time</th>
             <th>Block title</th>
+            <th>Course title</th>
         </tr>
         </thead>
         <tbody>
@@ -29,6 +30,7 @@
             <td th:text="${class.date}"></td>
             <td th:text="${class.time}"></td>
             <td th:text="${class.blockTitle}"></td>
+            <td th:text="${class.courseTitle}"></td>
         </tr>
         </tbody>
     </table>
