--- a/src/main/resources/templates/all-classes.html
+++ b/src/main/resources/templates/all-classes.html
@@ -19,6 +19,7 @@
             <th>Date</th>
             <th>Time</th>
             <th>Block title</th>
+            <th>Course title</th>
         </tr>
         </thead>
         <tbody>
@@ -28,6 +29,7 @@
             <td th:text="${class.date}"></td>
             <td th:text="${class.time}"></td>
             <td th:text="${class.blockTitle}"></td>
+            <td th:text="${class.courseTitle}"></td>
         </tr>
         </tbody>
     </table>
