--- a/src/main/resources/templates/block-details.html
+++ b/src/main/resources/templates/block-details.html
@@ -1,20 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Delete class</title>
+    <title>Block details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
-
 <body>
 
 
+<div class="container" style="margin-top:100px;">
+    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Block</div>
+    <table class="table table-striped" align="center" style="text-align: center; width:50%">
+        <thead>
+        <tr style="background-color: palegreen; width: 100%; height: 30px">
+            <th>Id</th>
+            <th>Block title</th>
+            <th>Course title</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td th:text="${blockById.id}"></td>
+            <td th:text="${blockById.blockTitle}"></td>
+            <td th:text="${blockById.courseTitle}"></td>
+        </tr>
+        </tbody>
+    </table>
 
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes</div>
+</div>
+
+
+
 
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
+    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes in the block</div>
     <table align="center" style="text-align: center; width:80%">
         <thead>
         <tr style="background-color: palegreen; width: 100%; height: 30px">
@@ -27,7 +47,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="class : ${classes}">
+        <tr th:each="class : ${classesInBlock}">
             <td th:text="${class.id}"></td>
             <td th:text="${class.topic}"></td>
             <td th:text="${class.date}"></td>
@@ -37,24 +57,6 @@
         </tr>
         </tbody>
     </table>
-
-</div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Delete class</div>
-<div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen class will also delete all notifications assigned to that class.</div>
-
-<div class="container" style="margin-top:100px;">
-    <div class="row">
-        <form th:action="@{/admin/classes/delete}" th:object="${classToDelete}" method="post">
-            <div class="mb-3">
-                <label for="class-id" class="form-label">Class id</label>
-                <input type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{id}">
-            </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
-        </form>
-    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
