--- a/src/main/resources/templates/block-details.html
+++ b/src/main/resources/templates/block-details.html
@@ -32,7 +32,6 @@
 
 
 
-
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Classes in the block</div>
     <table align="center" style="text-align: center; width:80%">
@@ -58,6 +57,16 @@
         </tbody>
     </table>
 </div>
+
+
+<div align="center">
+    <form th:action="@{/admin}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
+
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
