--- a/src/main/resources/templates/all-notifications.html
+++ b/src/main/resources/templates/all-notifications.html
@@ -35,11 +35,15 @@
     </table>
 
 </div>
-
-
-
+<br/>
 <div align="center">
-    <form th:action="@{/admin}">
+    <form th:action="@{/main-page/notifications-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Notifications Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
         <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
     </form>
 </div>
