--- a/src/main/resources/templates/block-details.html
+++ b/src/main/resources/templates/block-details.html
@@ -58,12 +58,23 @@
     </table>
 </div>
 
-
+<br/>
 <div align="center">
-    <form th:action="@{/admin}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    <form th:action="@{/main-page/blocks-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Blocks Manager</button>
     </form>
-
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/courses-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 
 
