--- a/src/main/resources/templates/add-block.html
+++ b/src/main/resources/templates/add-block.html
@@ -34,7 +34,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/blocks/add}" th:object="${newBlock}" method="post">
+        <form th:action="@{/main-page/blocks/add}" th:object="${newBlock}" method="post">
             <div class="mb-3">
                 <label for="block-title" class="form-label">Title</label>
                 <input type="text" class="form-control" id="block-title" th:field="*{blockTitle}">
@@ -44,11 +44,27 @@
                 <label for="course" class="form-label">Course Id</label>
                 <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course" th:field="*{courseId}">
             </div>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 40%">Add</button>
+            </div>
 
-            <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
         </form>
     </div>
 </div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/blocks-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Blocks Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 
