--- a/src/main/resources/templates/add-class.html
+++ b/src/main/resources/templates/add-class.html
@@ -36,7 +36,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/classes/add}" th:object="${newClass}" method="post">
+        <form th:action="@{/main-page/classes/add}" th:object="${newClass}" method="post">
             <div class="mb-3">
                 <label for="class-topic" class="form-label">Topic</label>
                 <input type="text" class="form-control" id="class-topic" th:field="*{topic}">
@@ -56,10 +56,23 @@
                 <label for="blockId" class="form-label">Block Id</label>
                 <input type="text" placeholder="Type id of EXISTING block" class="form-control" id="blockId" th:field="*{blockId}">
             </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            </div>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/classes-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Classes Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
