--- a/src/main/resources/templates/add-course.html
+++ b/src/main/resources/templates/add-course.html
@@ -13,7 +13,7 @@
 
 <div class="container" style="margin-top:100px;">
   <div class="row">
-    <form th:action="@{/admin/courses/add}" th:object="${newCourse}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/main-page/courses/add}" th:object="${newCourse}" method="post" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input type="text" class="form-control" id="title" th:field="*{title}">
@@ -21,10 +21,27 @@
       <div class="mb-3">
         <input type="file" class="form-control" name="image" accept="image/*"/>
       </div>
-      <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+        <div align="center">
+            <button type="submit" class="btn btn-primary" style="width: 45%">Add</button>
+        </div>
+
     </form>
   </div>
 </div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/courses-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 
