--- a/src/main/resources/templates/add-notification.html
+++ b/src/main/resources/templates/add-notification.html
@@ -43,7 +43,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/notifications/add}" th:object="${newNotification}" method="post">
+        <form th:action="@{/main-page/notifications/add}" th:object="${newNotification}" method="post">
             <div class="mb-3">
                 <label for="notification-topic" class="form-label">Topic</label>
                 <input type="text" class="form-control" id="notification-topic" th:field="*{topic}">
@@ -58,10 +58,23 @@
                 <label for="class-id" class="form-label">Class Id</label>
                 <input type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{classId}">
             </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            </div>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/notifications-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Notifications Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
