--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -13,7 +13,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/users/add}" th:object="${newUser}" method="post">
+        <form th:action="@{/main-page/users/add}" th:object="${newUser}" method="post">
             <div class="mb-3">
                 <label for="login" class="form-label">Login</label>
                 <input type="text" class="form-control" id="login" th:field="*{login}">
@@ -43,9 +43,23 @@
                 <label for="active-user" class="form-label">Active</label>
                 <input type="text" placeholder="YES or NO" class="form-control" id="active-user" th:field="*{activeUser}">
             </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 100%">Add</button>
+            </div>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/users-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Users Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
