--- a/src/main/resources/templates/all-blocks.html
+++ b/src/main/resources/templates/all-blocks.html
@@ -7,8 +7,6 @@
     <title>View All Blocks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-
-
 <body style="background-color: #f6f6f6">
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width:80%">
@@ -27,44 +25,34 @@
         </tr>
         </tbody>
     </table>
-
 </div>
-
-
-
-
 <div class="container" style="margin-top:100px">
     <div class="row" align="center" text-align="center">
         <th:block th:each="block : ${blocks}">
             <div class="col-4">
                 <div class="block" style="width: 100%; margin-bottom: 25px;">
                     <div class="block-body">
-                        <a th:href="@{/admin/blocks/details/__${block.id}__}">
+                        <a th:href="@{/main-page/blocks/details/__${block.id}__}">
                             <h5 class="block-title custom-center" th:text="${block.blockTitle}">Block title</h5>
                         </a>
-
-
                     </div>
-
                 </div>
             </div>
         </th:block>
     </div>
 </div>
-
-
-
-
-
-
-
-
+<br/>
 <div align="center">
-    <form th:action="@{/admin}">
-        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    <form th:action="@{/main-page/blocks-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Blocks Manager</button>
     </form>
 </div>
-
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
