--- a/src/main/resources/templates/all-users.html
+++ b/src/main/resources/templates/all-users.html
@@ -35,11 +35,16 @@
             </tr>
         </tbody>
 </table>
-
 </div>
-
+<br/>
 <div align="center">
-    <form th:action="@{/admin}">
+    <form th:action="@{/main-page/users-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Users Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
         <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
     </form>
 </div>
