--- a/src/main/resources/templates/delete-block.html
+++ b/src/main/resources/templates/delete-block.html
@@ -6,14 +6,8 @@
     <title>Delete course</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
-
 <body>
-
-
-
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks</div>
-
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width:80%">
         <thead>
@@ -31,23 +25,33 @@
         </tr>
         </tbody>
     </table>
-
 </div>
-
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Delete block</div>
 <div class="container" style="text-align: center; font-style: italic; font: 20pt Georgia; color: darksalmon">Deleting the chosen block will also delete all classes assigned to that block and all notifications assigned to the classes.</div>
-
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/blocks/delete}" th:object="${blockToDelete}" method="post">
+        <form th:action="@{/main-page/blocks/delete}" th:object="${blockToDelete}" method="post">
             <div class="mb-3">
                 <label for="block-id" class="form-label">Block id</label>
                 <input type="text" placeholder="Type id of EXISTING block" class="form-control" id="block-id" th:field="*{id}">
             </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 40%">Delete</button>
+            </div>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/blocks-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Blocks Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
