--- a/src/main/resources/templates/delete-class.html
+++ b/src/main/resources/templates/delete-class.html
@@ -46,16 +46,30 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/classes/delete}" th:object="${classToDelete}" method="post">
+        <form th:action="@{/main-page/classes/delete}" th:object="${classToDelete}" method="post">
             <div class="mb-3">
                 <label for="class-id" class="form-label">Class id</label>
                 <input type="text" placeholder="Type id of EXISTING class" class="form-control" id="class-id" th:field="*{id}">
             </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
+            </div>
         </form>
     </div>
 </div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/classes-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Classes Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
