--- a/src/main/resources/templates/delete-course-summary.html
+++ b/src/main/resources/templates/delete-course-summary.html
@@ -24,10 +24,15 @@
 </div>
 
 <div align="center">
-    <form th:action="@{/admin}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    <form th:action="@{/main-page/courses-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Courses Manager</button>
     </form>
-
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
