--- a/src/main/resources/templates/delete-course.html
+++ b/src/main/resources/templates/delete-course.html
@@ -36,15 +36,30 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/courses/delete}" th:object="${courseToDelete}" method="post">
+        <form th:action="@{/main-page/courses/delete}" th:object="${courseToDelete}" method="post">
             <div class="mb-3">
                 <label for="course-id" class="form-label">Course id</label>
                 <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{id}">
             </div>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 40%">Delete</button>
+            </div>
 
-            <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
         </form>
     </div>
+</div>
+
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/courses-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Courses Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
