--- a/src/main/resources/templates/delete-notification.html
+++ b/src/main/resources/templates/delete-notification.html
@@ -44,15 +44,28 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/notifications/delete}" th:object="${notificationToDelete}" method="post">
+        <form th:action="@{/main-page/notifications/delete}" th:object="${notificationToDelete}" method="post">
             <div class="mb-3">
                 <label for="notification-id" class="form-label">Notification id</label>
                 <input type="text" placeholder="Type id of EXISTING notification" class="form-control" id="notification-id" th:field="*{id}">
             </div>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
+            <div align="center">
+                <button type="submit" class="btn btn-primary" style="width: 40%">Delete</button>
+            </div>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/notifications-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to the Notifications Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 40%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
