--- a/src/main/resources/templates/delete-user.html
+++ b/src/main/resources/templates/delete-user.html
@@ -43,7 +43,7 @@
 
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/admin/users/delete}" th:object="${userToDelete}" method="post">
+        <form th:action="@{/main-page/users/delete}" th:object="${userToDelete}" method="post">
             <div class="mb-3">
                 <label for="user-id" class="form-label">User id</label>
                 <input type="text" placeholder="Type id of EXISTING user" class="form-control" id="user-id" th:field="*{id}">
@@ -52,6 +52,18 @@
             <button type="submit" class="btn btn-primary" style="width: 100%">Delete</button>
         </form>
     </div>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page/users-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Users Manager</button>
+    </form>
+</div>
+<br/>
+<div align="center">
+    <form th:action="@{/main-page}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
