--- a/src/main/resources/templates/registrations-manager.html
+++ b/src/main/resources/templates/registrations-manager.html
@@ -3,36 +3,33 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add block summary</title>
+    <title>Registrations Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
 <body>
 
 
-<div class="container" style="margin-top:100px; text-align: center">
-    New block added
-    <br/>
-    <br/>
-    <br/>
-    Regards,
-    <br/>
-    Courses_Manager Team
-    <br/>
-    <br/>
-    <br/>
+<div class="container" style="background-color: papayawhip; height: 70px; margin-top:100px">
+    <h1 style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">On this page you can manage registrations</h1>
 </div>
 
-<div align="center">
-    <form th:action="@{/main-page/blocks-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Blocks Manager</button>
-    </form>
+
+<div class="container" style="background-color: seashell; padding: 50px; border-radius:20px;">
+    <table align="center" style="text-align: center; width: 80%">
+        <tbody>
+        <tr>
+
+
+        </tbody>
+    </table>
 </div>
-<br/>
+
 <div align="center">
     <form th:action="@{/main-page}">
         <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
     </form>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
