--- a/src/main/resources/templates/update-block-summary.html
+++ b/src/main/resources/templates/update-block-summary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Update course summary</title>
+    <title>Update block summary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 </head>
@@ -11,7 +11,7 @@
 
 
 <div class="container" style="margin-top:100px; text-align: center">
-    The chosen course was updated
+    The chosen block was updated
     <br/>
     <br/>
     <br/>
@@ -23,8 +23,8 @@
     <br/>
 </div>
 <div align="center">
-    <form th:action="@{/main-page/courses-manager}">
-        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Courses Manager</button>
+    <form th:action="@{/main-page/blocks-manager}">
+        <button type="submit" class="btn btn-primary" style="width: 80%">Back to the Blocks Manager</button>
     </form>
 </div>
 <br/>
