--- a/src/main/resources/templates/update-block.html
+++ b/src/main/resources/templates/update-block.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add new block</title>
+    <title>Update block</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
 <body>
 
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Courses</div>
@@ -28,25 +27,44 @@
     </table>
 
 </div>
-
-
-<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new block to the chosen course</div>
-
+<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Blocks</div>
+<div class="container" style="margin-top: 10px; background-color: white; padding: 50px; border-radius:20px;">
+    <table align="center" style="text-align: center; width:80%">
+        <thead>
+        <tr style="background-color: palegreen; width: 100%; height: 30px">
+            <th>Id</th>
+            <th>Block title</th>
+            <th>Course title</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="block : ${blocks}">
+            <td th:text="${block.id}"></td>
+            <td th:text="${block.blockTitle}"></td>
+            <td th:text="${block.courseTitle}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+<div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Update block</div>
 <div class="container" style="margin-top:100px;">
     <div class="row">
-        <form th:action="@{/main-page/blocks/add}" th:object="${newBlock}" method="post">
+        <form th:action="@{/main-page/blocks/update}" th:object="${blockToUpdate}" method="post">
             <div class="mb-3">
-                <label for="block-title" class="form-label">Title</label>
-                <input type="text" class="form-control" id="block-title" th:field="*{blockTitle}">
+                <label for="block-id" class="form-label">Block id</label>
+                <input type="text" placeholder="Type id of EXISTING block" class="form-control" id="block-id" th:field="*{id}">
+            </div>
+            <div>
+                <label for="block-new-title" class="form-label">New block title</label>
+                <input type="text" class="form-control" id="block-new-title" th:field="*{blockTitle}">
             </div>
             <div class="mb-3">
-                <label for="course" class="form-label">Course Id</label>
-                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course" th:field="*{courseId}">
+                <label for="course-id" class="form-label">Course Id</label>
+                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="course-id" th:field="*{courseId}">
             </div>
             <div align="center">
-                <button type="submit" class="btn btn-primary" style="width: 40%">Add</button>
+                <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
             </div>
-
         </form>
     </div>
 </div>
@@ -62,10 +80,6 @@
         <button type="submit" class="btn btn-primary" style="width: 80%">Back to main page</button>
     </form>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
