Update registration method + templates

--- a/src/main/resources/templates/registrations-manager.html
+++ b/src/main/resources/templates/registrations-manager.html
@@ -34,6 +34,11 @@
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Add registration</button>
                 </form>
             </td>
+            <td>
+                <form th:action="@{/main-page/registrations/update-registration}">
+                    <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: darkgoldenrod">Update registration</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
