--- a/src/main/resources/templates/update-registration.html
+++ b/src/main/resources/templates/update-registration.html
@@ -87,11 +87,11 @@
             </div>
             <div>
                 <label for="registration-new-user-id" class="form-label">New registration user Id</label>
-                <input type="text" class="form-control" id="registration-new-user-id" th:field="*{userId}">
+                <input type="text" placeholder="Type id of EXISTING user" class="form-control" id="registration-new-user-id" th:field="*{userId}">
             </div>
             <div class="mb-3">
                 <label for="registration-new-course-id" class="form-label">New registration course Id</label>
-                <input type="text" class="form-control" id="registration-new-course-id" th:field="*{courseId}">
+                <input type="text" placeholder="Type id of EXISTING course" class="form-control" id="registration-new-course-id" th:field="*{courseId}">
             </div>
             <div align="center">
                 <button type="submit" class="btn btn-primary" style="width: 40%">Update</button>
