Student templates - part 1

--- a/src/main/resources/templates/admin/courses-manager.html
+++ b/src/main/resources/templates/admin/courses-manager.html
@@ -20,7 +20,7 @@
                 </form>
             </td>
             <td>
-                <form th:action="@{/main-page/all-courses-for-admin}">
+                <form th:action="@{/main-page/all-courses}">
                     <button type="submit" class="btn btn-primary" style="width: 100%; font: 20pt Verdana; background-color: salmon">Show courses</button>
                 </form>
             </td>
