--- a/src/main/resources/templates/admin/courses/course-details.html
+++ b/src/main/resources/templates/admin/courses/course-details.html
@@ -7,25 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-
-
-<div class="container" style="margin-top:100px;">
-    <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Course</div>
-    <table class="table table-striped" align="center" style="text-align: center; width:50%">
-        <thead>
-        <tr style="background-color: palegreen; width: 100%; height: 30px">
-            <th>Id</th>
-            <th>Title</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td th:text="${courseById.id}"></td>
-            <td th:text="${courseById.title}"></td>
-        </tr>
-        </tbody>
-    </table>
-
+<div class="container" align="center" style="margin-top:100px">
+    <div class="row" align="center" text-align="center">
+        <div class="course" style="width: 100%; margin-bottom: 25px;">
+            <div th:object="${courseById}" class="course-body">
+                <h5 class="course-title custom-center" th:text="${courseById.title}">Course title</h5>
+                <a>
+                    <img th:src="@{/uploads/__${courseById.imageName}__}" th:alt="${courseById.imageName}" class="responsive" />
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
 
