--- a/src/main/resources/templates/student/sign-up-for-course.html
+++ b/src/main/resources/templates/student/sign-up-for-course.html
@@ -7,22 +7,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<div class="container" style="margin-top:100px;">
-  <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Course</div>
-  <table class="table table-striped" align="center" style="text-align: center; width:50%">
-    <thead>
-    <tr style="background-color: palegreen; width: 100%; height: 30px">
-      <th>Id</th>
-      <th>Title</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td th:text="${course.id}"></td>
-      <td th:text="${course.title}"></td>
-    </tr>
-    </tbody>
-  </table>
+<div class="container" align="center" style="margin-top:100px">
+  <div class="row" align="center" text-align="center">
+    <div class="course" style="width: 100%; margin-bottom: 25px;">
+      <div th:object="${course}" class="course-body">
+        <h5 class="course-title custom-center" th:text="${course.title}">Course title</h5>
+        <a th:href="@{/student/courses/details/__${course.id}__}">
+          <img th:src="@{/uploads/__${course.imageName}__}" th:alt="${course.imageName}" class="responsive" />
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 <br/>
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Type you data</div>
@@ -38,6 +33,7 @@
         <input type="text" class="form-control" id="user-surname" th:field="*{userSurname}">
       </div>
       <div align="center">
+        <input type="hidden" name="courseId" th:value="${courseId}" class="form-control" id="course-id">
         <button type="submit" class="btn btn-primary" style="width: 40%">Sign up</button>
       </div>
     </form>
