--- a/src/main/resources/templates/admin/registrations/add-registration.html
+++ b/src/main/resources/templates/admin/registrations/add-registration.html
@@ -6,11 +6,8 @@
     <title>Add new registration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
 <body>
-
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Courses</div>
-
 <div class="container" style="background-color: white; padding: 50px; border-radius:20px;">
     <table class="table table-striped" align="center" style="text-align: center; width:50%">
         <thead>
@@ -26,9 +23,7 @@
         </tr>
         </tbody>
     </table>
-
 </div>
-
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Users</div>
 <div class="container" style="margin-top: 100px; background-color: white; padding: 50px; border-radius:20px;">
     <table align="center" style="text-align: center; width:80%">
@@ -37,7 +32,7 @@
             <th>Id</th>
             <th>Login</th>
             <th>Password</th>
-            <th>Type</th>
+            <th>Role</th>
             <th>Name</th>
             <th>Surname</th>
             <th>Active</th>
@@ -48,7 +43,7 @@
             <td th:text="${user.id}"></td>
             <td th:text="${user.login}"></td>
             <td th:text="${user.password}"></td>
-            <td th:text="${user.userType}"></td>
+            <td th:text="${user.userRole}"></td>
             <td th:text="${user.name}"></td>
             <td th:text="${user.surname}"></td>
             <td th:text="${user.activeUser}"></td>
@@ -56,9 +51,7 @@
         </tbody>
     </table>
 </div>
-
 <div class="container" style="text-align: center; font-style: italic; font: 40pt Georgia; color: darkred">Add new registration to the chosen course and user</div>
-
 <div class="container" style="margin-top:100px;">
     <div class="row">
         <form th:action="@{/main-page/registrations/add}" th:object="${newRegistration}" method="post">
