--- a/src/main/resources/templates/admin/users/add-user.html
+++ b/src/main/resources/templates/admin/users/add-user.html
@@ -6,11 +6,7 @@
     <title>Add new user</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
-
-
 <body>
-
 <div class="container" style="margin-top:100px;">
     <div class="row">
         <form th:action="@{/main-page/users/add}" th:object="${newUser}" method="post">
@@ -25,8 +21,8 @@
             </div>
 
             <div class="mb-3">
-                <label for="user-type" class="form-label">User type</label>
-                <input type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-type" th:field="*{userType}">
+                <label for="user-type" class="form-label">User role</label>
+                <input type="text" placeholder="ADMIN or STUDENT or TEACHER" class="form-control" id="user-type" th:field="*{userRole}">
             </div>
 
             <div class="mb-3">
