--- a/src/main/resources/templates/admin/users/all-users.html
+++ b/src/main/resources/templates/admin/users/all-users.html
@@ -17,7 +17,7 @@
                 <th>Id</th>
                 <th>Login</th>
                 <th>Password</th>
-                <th>Type</th>
+                <th>Role</th>
                 <th>Name</th>
                 <th>Surname</th>
                 <th>Active</th>
@@ -28,7 +28,7 @@
                 <td th:text="${user.id}"></td>
                 <td th:text="${user.login}"></td>
                 <td th:text="${user.password}"></td>
-                <td th:text="${user.userType}"></td>
+                <td th:text="${user.userRole}"></td>
                 <td th:text="${user.name}"></td>
                 <td th:text="${user.surname}"></td>
                 <td th:text="${user.activeUser}"></td>
