Navbar for admin created

--- a/src/main/resources/templates/admin/registrations/update-registration.html
+++ b/src/main/resources/templates/admin/registrations/update-registration.html
@@ -47,7 +47,7 @@
             <th>Id</th>
             <th>Login</th>
             <th>Password</th>
-            <th>Type</th>
+            <th>Role</th>
             <th>Name</th>
             <th>Surname</th>
             <th>Active</th>
@@ -58,7 +58,7 @@
             <td th:text="${user.id}"></td>
             <td th:text="${user.login}"></td>
             <td th:text="${user.password}"></td>
-            <td th:text="${user.userType}"></td>
+            <td th:text="${user.userRole}"></td>
             <td th:text="${user.name}"></td>
             <td th:text="${user.surname}"></td>
             <td th:text="${user.activeUser}"></td>
