--- a/src/main/resources/templates/fragments/navbar-for-admin.html
+++ b/src/main/resources/templates/fragments/navbar-for-admin.html
@@ -3,22 +3,89 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Navbar</title>
 </head>
 <body>
-<nav class="navbar custom-navbar" th:fragment="nav">
-    <div class="container-fluid">
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page}">Courses Manager</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/courses-manager}">Courses</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/blocks-manager}">Blocks</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/classes-manager}">Classes</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/users-manager}">Users</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/registrations-manager}">Registrations</a>
-        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page/notifications-manager}">Notifications</a>
-        <form class="form-inline" th:action="@{/logout}" method="post">
-            <button class="btn btn-outline-success" type="submit">Logout</button>
-        </form>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid" style="background-color: darkgreen">
+        <a sec:authorize="hasAuthority('ADMIN')" class="navbar-brand" th:href="@{/main-page}" style="color: palegreen">Courses Manager</a>
+        <div class="collapse navbar-collapse" id="navbarScroll" style="background-color: darkgreen">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/courses-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Courses
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-courses}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses/update-course}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/courses/delete-course}">Delete</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/blocks-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Blocks
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-blocks}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/update-block}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/blocks/delete-block}">Delete</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/classes-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Classes
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-classes}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes/update-class}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/classes/delete-class}">Delete</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/users-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Users
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-users}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users/update-user}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/users/delete-user}">Delete</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/registrations-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Registrations
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-registrations}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/update-registration}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/registrations/delete-registration}">Delete</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" th:href="@{/main-page/notifications-manager}" style="color: palegreen" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Notifications
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/main-page/all-notifications}">Show</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications}">Add</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/update-notification}">Update</a></li>
+                        <li><a class="dropdown-item" th:href="@{/main-page/notifications/delete-notification}">Delete</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="form-inline" th:action="@{/logout}" method="post" style="background-color: darkgreen">
+                <button class="btn btn-outline-success" style="color: palegreen; border-color: palegreen" type="submit">Logout</button>
+            </form>
+        </div>
     </div>
 </nav>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
